# mysql-dashboard-rs

./: .gitignore  .licenserc.yaml  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.github/workflows/: release.yml
src/: lib.rs
src/constant/: mod.rs
src/mysql/: database.rs  mod.rs  mysql_client.rs
src/util/: mod.rs
