#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

[package]
name = "mysql-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.2.1"
clap = { version = "4.0.27", features = ["derive"]}
chrono = "0.4"
fern = "0.6.1"
lazy_static = "1.4.0"
log = "0.4"
mysql = "23.0.0"
rust-s3 = "0.32"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }

[[bin]]
name = "mysql-cli"
path = "src/bin/cmd/mysql_cli.rs"

[[bin]]
name = "mysql-dashboard"
path = "src/bin/mysql_dashboard.rs"
